# rberdyga-Engineering-Thesis

./: README.md  main.tex  references.bib
App/sources/: .gitmodules  CMakeLists.txt  main.cpp  mainwindow.cpp  test.dcm
LATEX/tex/: 1-wstep.tex  2-de-finibus.tex
